--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "monolog/monolog": "^2.8",
         "php-di/php-di": "^6.4",
         "slim/psr7": "^1.5",
-        "slim/slim": "^4.10"
+        "slim/slim": "^4.10",
+        "symfony/var-dumper": "^7.1",
+        "vlucas/valitron": "^1.4"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^1.0.0",
