Add doc for API using Swagger-UI

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "php-di/php-di": "^6.4",
         "slim/psr7": "^1.5",
         "slim/slim": "^4.10",
+        "slim/twig-view": "^3.4",
         "symfony/var-dumper": "^7.1",
         "vlucas/valitron": "^1.4"
     },
